# arronax

./: .bzrignore  .gitignore  MANIFEST.in  Makefile  NEWS.txt  README.txt  run.py  setup.cfg  setup.py
arronax/: __init__.py  _meta.py  about.py  categoriesbrowser.py  connection.py  converter.py  desktopfile.py  edit.py  editor.py  filechooser.py  iconbrowser.py  menus.py  mimetypes.py  nautilus-arronax.py  parsecli.py  plugin.py  quicklist.py  settings.py  statusbar.py  tvtools.py  utils.py  widgets.py  winclass.py  xdgdirs.py  xdgpath.py
caja/: caja-arronax.py
data/desktop/: arronax.desktop  arronax.desktop.in
data/ui/: appbrowser.ui  categoriesdlg.ui  edit.ui  icondlg.ui  mimetypes.ui  quicklist.ui
debian/: arronax-base.install  arronax-caja.install  arronax-nautilus.docs  arronax-thunar.install  arronax.install  arronax.postinst.debhelper  arronax.prerm.debhelper  changelog  control  copyright  files  rules
nautilus/: nautilus-arronax.py
nemo/: nemo-arronax.py
plugins/: caja-arronax.py  nautilus-arronax.py  nemo-arronax.py  thunar-arronax.py
po/: POTFILES.in  arronax.pot  bg.po  ca.po  cs.po  de.po  en_GB.po  es.po  fi.po  fr.po  gl.po  hr.po  hu.po  it.po  ku.po  ms.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  tr.po  zh_CN.po
scripts/: create-mo-files.sh  translate-desktop-files.sh  update-po-files.sh  update-potfiles-in.sh
