[metadata]
name = arronax
version = 0.7.2
description = Create and modify application, file and URI starters.
maintainer = Florian Diesch
maintainer_email = devel@florian-diesch.de
author = Florian Diesch
author_email = devel@florian-diesch.de
url = https://www.florian-diesch.de/software/arronax/
download_url = https://www.florian-diesch.de/software/arronax/
long_description = file: README.txt
